--- a/Første eksamens projekt razorpage/Hillerødrazorpage.csproj
+++ b/Første eksamens projekt razorpage/Hillerødrazorpage.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\DeleteMember.css" />
+    <None Include="wwwroot\css\EditMember.css" />
+    <None Include="wwwroot\css\ShowAllMembers.css" />
+    <None Include="wwwroot\css\ShowBoats.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Første Eksamens projekt\HillerødClassLibrary.csproj" />
   </ItemGroup>
 
