--- a/Første eksamens projekt Console/HillerødConsole.csproj
+++ b/Første eksamens projekt Console/HillerødConsole.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Første Eksamens projekt\HillerødClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
